Adding properties to create db endpoint
