# api/swagger/swagger.yaml
@@ -13,6 +13,7 @@ produces:
   - multipart/form-data
 
 paths:
+
   /:
     x-swagger-router-controller: about
     get:
@@ -171,7 +172,7 @@ paths:
         - name: type
           description: Database type.
           in: query
-          required: true
+          required: false
           type: string
           enum:
             - keyvalue
@@ -180,14 +181,15 @@ paths:
             - docstore
             - counter
         - name: name
-          description: Database name.
+          description: Database name or address.
           type: string
           in: query
           required: true
-        - name: indexBy
-          description: Index value.
-          type: string
-          in: query
+        - name: properties
+          description: Properties for the data store.
+          in: body
+          schema:
+            $ref: "#/definitions/dbProperties"
           required: false
       tags:
         - OrbitDb
@@ -203,6 +205,19 @@ paths:
             $ref: "#/definitions/error"
 
 definitions:
+
+  dbProperties:
+    description: Datastore properties object
+    properties:
+      write:
+        description: Access Control
+        type: array
+        items:
+          type: string
+      indexBy:
+        description: Index property for docstore
+        type: string
+
   validString:
     description: A valid string
     type: string
